helper scripts for CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,19 +6,16 @@ build_allways: &build_allways
     tags:
       only: /.*/
 defaults: &defaults
-  working_directory: /home/circleci/.go_workspace/src/github.com/kubeless/kubeless
+  working_directory: /home/circleci/.go_workspace/src/github.com/kubeless/kafka-trigger
   environment:
     GOPATH: /home/circleci/.go_workspace
     CONTROLLER_IMAGE_NAME: bitnami/kubeless-controller-manager
-    BUILDER_IMAGE_NAME: kubeless/function-image-builder
     KAFKA_CONTROLLER_IMAGE_NAME: bitnami/kafka-trigger-controller
-    NATS_CONTROLLER_IMAGE_NAME: bitnami/nats-trigger-controller
-    KINESIS_CONTROLLER_IMAGE_NAME: bitnami/kinesis-trigger-controller
     CGO_ENABLED: "0"
     TEST_DEBUG: "1"
     GKE_VERSION: 1.8.8-gke.0
     MINIKUBE_VERSION: v0.25.2
-    MANIFESTS: kubeless kubeless-non-rbac kubeless-openshift kafka-zookeeper kafka-zookeeper-openshift nats kinesis
+    MANIFESTS: kafka-zookeeper kafka-zookeeper-openshift
 exports: &exports
   # It is not possible to resolve env vars in the environment section:
   # https://discuss.circleci.com/t/using-environment-variables-in-config-yml-not-working/14237
@@ -26,17 +23,14 @@ exports: &exports
     CONTROLLER_TAG=${CIRCLE_TAG:-build-$CIRCLE_WORKFLOW_ID}
     echo "export CONTROLLER_TAG=${CONTROLLER_TAG}" >> $BASH_ENV
     echo "export CONTROLLER_IMAGE=${CONTROLLER_IMAGE_NAME}:${CONTROLLER_TAG}" >> $BASH_ENV
-    echo "export FUNCTION_IMAGE_BUILDER=${BUILDER_IMAGE_NAME}:${CONTROLLER_TAG}" >> $BASH_ENV
     echo "export KAFKA_CONTROLLER_IMAGE=${KAFKA_CONTROLLER_IMAGE_NAME}:${CONTROLLER_TAG}" >> $BASH_ENV
-    echo "export NATS_CONTROLLER_IMAGE=${NATS_CONTROLLER_IMAGE_NAME}:${CONTROLLER_TAG}" >> $BASH_ENV
-    echo "export KINESIS_CONTROLLER_IMAGE=${KINESIS_CONTROLLER_IMAGE_NAME}:${CONTROLLER_TAG}" >> $BASH_ENV    
-    echo "export KUBECFG_JPATH=/home/circleci/src/github.com/kubeless/kubeless/ksonnet-lib" >> $BASH_ENV
+    echo "export KUBECFG_JPATH=/home/circleci/src/github.com/kubeless/kafka-trigger/ksonnet-lib" >> $BASH_ENV
     echo "export PATH=$(pwd)/bats/libexec:$PATH" >> $BASH_ENV
 restore_workspace: &restore_workspace
   run: |
     make bootstrap
     sudo cp -r /tmp/go/bin/* /usr/local/bin/
-    cp -r /tmp/go/src/github.com/kubeless/kubeless/*yaml .
+    cp -r /tmp/go/src/github.com/kubeless/kafka-trigger/*yaml .
 should_test: &should_test
   run: |
     case $CIRCLE_JOB in
@@ -59,28 +53,6 @@ should_test: &should_test
         export SHOULD_TEST=1
       fi
       ;;
-    # In kase of minikube+NATS we want to test it if
-    # it is a Pull Request related to NATS (discovered from the PR title)
-    # or if the build is from the "master" branch
-    minikube_nats)
-      if [[ -n "$CIRCLE_PULL_REQUESTS" ]]; then
-        pr_nats_title=$(curl -H "Authorization: token $ACCESS_TOKEN" "https://api.github.com/repos/$TRAVIS_REPO_SLUG/pulls/${TRAVIS_PULL_REQUEST}" | grep title || true)
-      fi
-      if [[ -z "$CIRCLE_PULL_REQUESTS" || "$pr_nats_title" == "" || "$pr_nats_title" =~ ^.*(Nats|nats|NATS).*$ ]]; then
-        export SHOULD_TEST=1
-      fi
-      ;;
-    # In kase of minikube+Kinesis we want to test it if
-    # it is a Pull Request related to Kinesis (discovered from the PR title)
-    # or if the build is from the "master" branch
-    minikube_kinesis)
-      if [[ -n "$CIRCLE_PULL_REQUESTS" ]]; then
-        pr_kinesis_title=$(curl -H "Authorization: token $ACCESS_TOKEN" "https://api.github.com/repos/$TRAVIS_REPO_SLUG/pulls/${TRAVIS_PULL_REQUEST}" | grep title || true)
-      fi
-      if [[ -z "$CIRCLE_PULL_REQUESTS" || "$pr_kinesis_title" == "" || "$pr_kinesis_title" =~ ^.*(Kinesis|kinesis).*$ ]]; then
-        export SHOULD_TEST=1
-      fi
-      ;;      
     esac
     echo "Should test? $SHOULD_TEST"
     if [[ "$SHOULD_TEST" != "1" ]]; then
@@ -94,30 +66,10 @@ workflows:
     jobs:
       - build:
           <<: *build_allways
-      - minikube:
-          <<: *build_allways
-          requires:
-            - build
-      - minikube_core_triggers:
-          <<: *build_allways
-          requires:
-            - build
-      - minikube_build_functions:
-          <<: *build_allways
-          requires:
-            - build
       - minikube_kafka:
           <<: *build_allways
           requires:
             - build
-      - minikube_nats:
-          <<: *build_allways
-          requires:
-            - build
-      - minikube_kinesis:
-          <<: *build_allways
-          requires:
-            - build            
       - GKE:
           <<: *build_allways
           requires:
@@ -127,12 +79,7 @@ workflows:
             branches:
               only: master
           requires:
-            - minikube
-            - minikube_core_triggers
-            - minikube_build_functions
             - minikube_kafka
-            - minikube_nats
-            - minikube_kinesis
             - GKE
       - release:
           filters:
@@ -141,12 +88,7 @@ workflows:
             branches:
               ignore: /.*/
           requires:
-            - minikube
-            - minikube_core_triggers
-            - minikube_build_functions
             - minikube_kafka
-            - minikube_nats
-            - minikube_kinesis
             - GKE
 jobs:
   build:
@@ -172,7 +114,7 @@ jobs:
           root: /home/circleci/.go_workspace
           paths: 
             - bin
-            - src/github.com/kubeless/kubeless/*yaml
+            - src/github.com/kubeless/kafka-trigger/*yaml
       - store_artifacts:
           path: /home/circleci/.go_workspace/bin/kubeless
       - store_artifacts:
@@ -234,38 +176,9 @@ jobs:
       - attach_workspace:
           at: /tmp/go
       - <<: *restore_workspace
-      - run: ./script/pull-or-build-image.sh controller-image
       - run: ./script/pull-or-build-image.sh kafka-controller-image
       - run: ./script/integration-tests minikube deployment
       - run: ./script/integration-tests minikube kafka
-  minikube_nats:
-    <<: *defaults
-    machine: true
-    steps:
-      - <<: *should_test
-      - checkout
-      - <<: *exports
-      - attach_workspace:
-          at: /tmp/go
-      - <<: *restore_workspace
-      - run: ./script/pull-or-build-image.sh controller-image
-      - run: ./script/pull-or-build-image.sh nats-controller-image
-      - run: ./script/integration-tests minikube deployment
-      - run: ./script/integration-tests minikube nats
-  minikube_kinesis:
-    <<: *defaults
-    machine: true
-    steps:
-      - <<: *should_test
-      - checkout
-      - <<: *exports
-      - attach_workspace:
-          at: /tmp/go
-      - <<: *restore_workspace
-      - run: ./script/pull-or-build-image.sh controller-image
-      - run: ./script/pull-or-build-image.sh kinesis-controller-image
-      - run: ./script/integration-tests minikube deployment
-      - run: ./script/integration-tests minikube kinesis      
   GKE:
     <<: *defaults
     docker:
