--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,6 +93,7 @@ jobs:
           git clone https://github.com/kubeless/kubeless.git
           cd kubeless
           make binary
+          ln -s  ../ksonnet-lib ksonnet-lib
           make all-yaml
           cp ./kubeless/kubeless-non-rbac.yaml ./kubeless/kubeless.yaml ..
           cd -
