--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,6 +84,7 @@ jobs:
       - checkout
       - <<: *exports
       - run: make bootstrap
+      - run: mkdir build-manifests
       # Install kubeless required files
       - run: |
           git clone https://github.com/kubeless/kubeless.git $GOPATH/src/github.com/kubeless/kubeless
@@ -92,13 +93,12 @@ jobs:
           make binary
           make all-yaml
           cd -
-          cp $GOPATH/src/github.com/kubeless/kubeless/kubeless-non-rbac.yaml $GOPATH/src/github.com/kubeless/kubeless/kubeless.yaml .
+          cp $GOPATH/src/github.com/kubeless/kubeless/kubeless-non-rbac.yaml $GOPATH/src/github.com/kubeless/kubeless/kubeless.yaml build-manifests/
       - run: make VERSION=${CONTROLLER_TAG} binary
       - run: make test
       - run: make validation
       - run: make all-yaml
       - run: |
-          mkdir build-manifests
           IFS=' ' read -r -a manifests <<< "$MANIFESTS"
           for f in "${manifests[@]}"; do
             sed -i.bak 's/:latest/'":${CONTROLLER_TAG}"'/g' ${f}.yaml
