--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ restore_workspace: &restore_workspace
   run: |
     make bootstrap
     sudo cp -r /tmp/go/bin/* /usr/local/bin/
-    cp -r /tmp/go/src/github.com/kubeless/kafka-trigger/*yaml .
+    cp -r /tmp/go/src/github.com/kubeless/kafka-trigger/build-manifests/*yaml .
 should_test: &should_test
   run: |
     case $CIRCLE_JOB in
@@ -84,12 +84,21 @@ jobs:
       - checkout
       - <<: *exports
       - run: make bootstrap
+      - run: mkdir build-manifests
+      # Install kubeless required files
+      - run: |
+          git clone https://github.com/kubeless/kubeless.git $GOPATH/src/github.com/kubeless/kubeless
+          ln -s $(pwd)/ksonnet-lib $GOPATH/src/github.com/kubeless/kubeless/ksonnet-lib
+          cd $GOPATH/src/github.com/kubeless/kubeless
+          make binary
+          make all-yaml
+          cd -
+          cp $GOPATH/src/github.com/kubeless/kubeless/kubeless-non-rbac.yaml $GOPATH/src/github.com/kubeless/kubeless/kubeless.yaml build-manifests/
       - run: make VERSION=${CONTROLLER_TAG} binary
       - run: make test
       - run: make validation
       - run: make all-yaml
       - run: |
-          mkdir build-manifests
           IFS=' ' read -r -a manifests <<< "$MANIFESTS"
           for f in "${manifests[@]}"; do
             sed -i.bak 's/:latest/'":${CONTROLLER_TAG}"'/g' ${f}.yaml
@@ -97,9 +106,9 @@ jobs:
           done
       - persist_to_workspace:
           root: /home/circleci/.go_workspace
-          paths: 
+          paths:
             - bin
-            - src/github.com/kubeless/kafka-trigger/*yaml
+            - src/github.com/kubeless/kafka-trigger/build-manifests/*yaml
       - store_artifacts:
           path: /home/circleci/.go_workspace/bin/kubeless
       - store_artifacts:
