--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ restore_workspace: &restore_workspace
   run: |
     make bootstrap
     sudo cp -r /tmp/go/bin/* /usr/local/bin/
-    cp -r /tmp/go/*yaml .
+    cp -r /tmp/go/build-manifests/*yaml .
 should_test: &should_test
   run: |
     case $CIRCLE_JOB in
