--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,8 @@ defaults: &defaults
     KAFKA_CONTROLLER_IMAGE_NAME: kubeless/kafka-trigger-controller
     CGO_ENABLED: "0"
     TEST_DEBUG: "1"
-    MINIKUBE_VERSION: v1.2.0
+    MINIKUBE_VERSION: v1.13.1
+    MINIKUBE_KUBERNETES_VERSION: v1.14.9
     MANIFESTS: kafka-zookeeper kafka-zookeeper-openshift
 exports: &exports
   # It is not possible to resolve env vars in the environment section:
