--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,6 @@ defaults: &defaults
     CGO_ENABLED: "0"
     TEST_DEBUG: "1"
     MINIKUBE_VERSION: v1.13.1
-    MINIKUBE_KUBERNETES_VERSION: v1.14.9
     MANIFESTS: kafka-zookeeper kafka-zookeeper-openshift
 exports: &exports
   # It is not possible to resolve env vars in the environment section:
@@ -55,6 +54,9 @@ workflows:
       - build:
           <<: *build_allways
       - minikube_kafka:
+          matrix:
+            parameters:
+              k8s-version: ["v1.14.9", "v1.15.11", "v1.16.13", "v1.17.9", "v1.18.9"]
           <<: *build_allways
           requires:
             - build
@@ -122,10 +124,15 @@ jobs:
     <<: *defaults
     machine:
       image: ubuntu-1604:202007-01
+    parameters:
+      k8s-version:
+        type: string
     steps:
       - <<: *should_test
       - checkout
       - <<: *exports
+      - environment:
+          MINIKUBE_KUBERNETES_VERSION: << parameters.k8s-version >>
       - attach_workspace:
           at: /tmp/go
       - <<: *restore_workspace
