--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2
+version: 2.1
 
 ## Definitions
 build_allways: &build_allways
@@ -10,7 +10,7 @@ defaults: &defaults
     KAFKA_CONTROLLER_IMAGE_NAME: kubeless/kafka-trigger-controller
     CGO_ENABLED: "0"
     TEST_DEBUG: "1"
-    MINIKUBE_VERSION: v1.2.0
+    MINIKUBE_VERSION: v1.13.1
     MANIFESTS: kafka-zookeeper kafka-zookeeper-openshift
 exports: &exports
   # It is not possible to resolve env vars in the environment section:
@@ -32,7 +32,7 @@ should_test: &should_test
     # In kase of minikube+kafka we want to test it if
     # it is a Pull Request related to Kafka (discovered from the PR title)
     # or if the build is from the "master" branch
-    minikube_kafka)
+    minikube_kafka*)
       if [[ -n "$CIRCLE_PULL_REQUESTS" ]]; then
         pr_kafka_title=$(curl -H "Authorization: token $ACCESS_TOKEN" "https://api.github.com/repos/$TRAVIS_REPO_SLUG/pulls/${CIRCLE_PR_NUMBER}" | grep title || true)
       fi
@@ -57,6 +57,11 @@ workflows:
           <<: *build_allways
           requires:
             - build
+          matrix:
+            parameters:
+              # Amazon EKS Kubernetes versions
+              # See https://docs.aws.amazon.com/eks/latest/userguide/kubernetes-versions.html
+              k8s-version: ["v1.14.9", "v1.15.11", "v1.16.13", "v1.17.9", "v1.18.9"]
       - push_latest_images:
           filters:
             branches:
@@ -98,12 +103,7 @@ jobs:
       - run: make test
       - run: make validation
       - run: make all-yaml
-      - run: |
-          IFS=' ' read -r -a manifests <<< "$MANIFESTS"
-          for f in "${manifests[@]}"; do
-            sed -E -i.bak 's/image: .*\/kafka-trigger-controller:.*/image: kubeless\/kafka-trigger-controller:'"${CONTROLLER_TAG}"'/g' ${f}.yaml
-            cp ${f}.yaml build-manifests/
-          done
+      - run: make build-manifests
       - persist_to_workspace:
           root: /go
           paths:
@@ -121,13 +121,19 @@ jobs:
     <<: *defaults
     machine:
       image: ubuntu-1604:202007-01
+    parameters:
+      k8s-version:
+        type: string
     steps:
       - <<: *should_test
       - checkout
       - <<: *exports
+      - run: |
+          echo "export MINIKUBE_KUBERNETES_VERSION=<< parameters.k8s-version >>" >> $BASH_ENV
       - attach_workspace:
           at: /tmp/go
       - <<: *restore_workspace
+      - run: sudo apt-get update && sudo apt-get install -y conntrack
       - run: ./script/pull-or-build-image.sh kafka-controller-image
       - run: ./script/integration-tests minikube deployment
       - run: ./script/integration-tests minikube kafka
